insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1124,3 +1124,8 @@ li .dot {
 .remove_fields {
   margin-top:15px;
 }
+
+.handex_text_area {
+  width: 100%;
+  height: 100%;
+}
